# chainpilot

./: .gitignore  LICENSE  Makefile  README.md  RUN_GUIDE.md  pyproject.toml  ruff.toml
.github/workflows/: ci.yml  eval.yml
chainpilot/: .env.example  config.py  mock_data.py  package-lock.json  setup.command  start.command
chainpilot/backend/: agent.py  main.py  monitor.py  tools.py  trust_engine.py  uncertainty_tracker.py
chainpilot/frontend/: index.html  package-lock.json  package.json
chainpilot/frontend/src/: App.css  App.jsx
chainpilot/mac/: README.md  setup.command  start.command  stop.command
docs/: ARCHITECTURE.md
eval/: README.md  RUBRIC.md  instrumentation.py  orchestrator.py  prompts.py  rubric_audit.py  runners.py  schemas.py  scorers.py
eval/reports/: run_20260603_171124.md  run_20260603_171633.md  run_20260603_172713.md  run_20260616_061613.md  run_20260616_061701.md  run_20260616_062016.md
eval/scenarios/: scenario_001.json  scenario_002.json  scenario_003.json  scenario_004.json  scenario_005.json  scenario_006.json  scenario_007.json  scenario_008.json  scenario_009.json  scenario_010.json  scenario_011.json  scenario_012.json  scenario_013.json  scenario_014.json  scenario_015.json  scenario_016.json  scenario_017.json  scenario_018.json  scenario_019.json  scenario_020.json  scenario_021.json  scenario_022.json  scenario_023.json  scenario_024.json  scenario_025.json  scenario_026.json  scenario_027.json  scenario_028.json  scenario_029.json  scenario_030.json  scenario_031.json  scenario_032.json  scenario_033.json  scenario_034.json
tests/: test_orchestrator.py  test_runners.py  test_scenarios.py  test_scorers.py  test_smoke.py
